Ajustes del miercoles ofi

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <!--<script src="https://cdn.ckeditor.com/4.15.0/full-all/ckeditor.js"></script>-->
   <script src="http://localhost:5003/assets/ckeditor2/ckeditor.js"></script>
 </head>
